Use java.util.Currency for Event#monetaryAmount
More type-safe, fewer conversion steps.